test: add @SuppressWarnings annotation for sequenced collections